Added support for generated thumbnails
